# talkie

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Makefile  README.md  TODO.md  adventure_guy.py  ai_player.py  build.py  cache.py  config.toml  if_player.py  image_gen.py  openaiclient.py  prompts.yaml  pyproject.toml  pyrightconfig.json  talkie.py  test_cache.py  test_talkie.py  text_to_speech.py  tk  tts_handler.py  viewer.py  voice_recorder.py
gamedocs/: Deadline_CommodoreManual.txt  deadline_game_facts.md  lurking.txt  lurking_horror_facts.md
games/: red_moon.l9  snowball_v3.l9
talkie/: __init__.py  __main__.py  adventure_guy.py  ai_player.py  audio_player.py  cache.py  draw.py  if_player.py  image_drawer.py  image_gen.py  layout.py  main.py  markdown.py  openaiclient.py  scanlines.py  talkie.py  talkie_config.py  text_to_speech.py  text_utils.py  tts_chunk.py  viewer.py  voice_recorder.py
talkie/data/: layout.toml  prompts.toml  prompts.yaml
talkie/utils/: __init__.py  nerd.py  wrap.py
tests/: test_cache.py  test_draw.py  test_draw_benchmark.py  test_if_player.py  test_layout.py  test_text_to_speech.py  test_text_utils.py  test_transcription.py  test_tts_chunk.py
tools/: CMakeLists.txt
tools/Magnetic/: CMakeLists.txt
tools/Magnetic/Talkie/: defs.h  emu.c  main.c
tools/level9/: CMakeLists.txt  bitmap.c  level9.c  level9.h  talkie.c
tools/ztools/: CLAUDE.md  CMakeLists.txt  check.c  getopt.c  infinfo.c  infodump.c  inforead.c  pix2gif.c  pix2gif.h  showdict.c  showhead.c  showobj.c  showverb.c  symbols.c  tx.h  txd.c  txio.c
